go_microservice_frameworks/microservice_implementation/kubernetes/k8s-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: microservice-in-go
  labels:
    app: microservice-in-go
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: microservice-in-go
        tier: service
    spec:
      containers:
      - name: microservice-in-go
        image: "go-microservice:1.0.0"
        ports:
        - containerPort: 9090
        resources:
          requests:
            memory: "64Mi"
            cpu: "125m"
          limits:
            memory: "128Mi"
            cpu: "250m"

        # check of gin-web is alive and healthy
        readinessProbe:
          httpGet:
            path: /ping
            port: 9090
          initialDelaySeconds: 5
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /ping
            port: 9090
          initialDelaySeconds: 5
          timeoutSeconds: 5
